crates/pgls_pretty_print/tests/snapshots/single/tests__select_fetch_with_ties_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_fetch_with_ties_0_100.sql
snapshot_kind: text
---
SELECT name FROM leaderboard ORDER BY score DESC OFFSET 3 ROWS FETCH FIRST 10 ROWS WITH TIES;
