crates/pgls_pretty_print/tests/snapshots/single/tests__select_fetch_with_ties_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_fetch_with_ties_0.sql
snapshot_kind: text
---
select
  name
from
  leaderboard
order by score desc
offset 3 rows
fetch first 10 rows with ties;
