crates/pgls_pretty_print/tests/snapshots/single/tests__select_for_update_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_for_update_0.sql
snapshot_kind: text
---
SELECT
  *
FROM
  seats
ORDER BY seat_no
LIMIT 1
FOR UPDATE SKIP LOCKED;
