crates/pgls_pretty_print/tests/snapshots/single/tests__select_window_clause_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_window_clause_0_100.sql
snapshot_kind: text
---
SELECT
  total,
  running_total
FROM
  metrics
WHERE
  total > 0
WINDOW
  w AS (
  PARTITION BY series_id
  ORDER BY captured_at);
