crates/pgls_pretty_print/tests/snapshots/single/tests__select_with_alias_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/select_with_alias_100.sql
snapshot_kind: text
---
SELECT a AS x, b AS y, c FROM t;
